--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@
   font-style: normal;
 }
 
-.fa {
+.hamburger {
   display: inline-block;
   font-family: fontawesome;
   font-size: inherit;
@@ -101,11 +101,19 @@
   grid-area: 3/1/4/2;
   flex-direction: row;
   justify-content: flex-start;
+  margin-top: 1.87rem;
 }
 
 @media (max-width: 980px) {
   .social-wrapper {
     justify-content: center;
+    grid-area: 3/1/4/3;
+  }
+  .sun {
+    grid-area: 2/1/3/2;
+  }
+  .shibolet {
+    grid-area: 1/2/3/4;
   }
 }
 
@@ -120,12 +128,8 @@
   text-decoration: none;
   margin-right: 1.25rem;
   transition: all .3s;
-  
 }
 
-/* .social-wrapper a:hover {
-  background: #516fad;
-} */
 
 a.more {
   display: inline-block;
@@ -147,7 +151,6 @@ a.more:hover {
   color: #fff;
 }
 
-
 .fa-facebook-f:hover {
   background-color: #516fad;
 }
@@ -158,14 +161,7 @@ a.more:hover {
 
 .fa-dribbble:hover {
   background-color: #ea4c89;
-} 
-/* 
-.footer-link {
-  font-weight: bold;
-  padding-left: 5px;
-  color: #939292;
-  letter-spacing: 0.02rem;
-} */ 
+}
 
 /*---------- Layout  ----------*/
 
@@ -217,6 +213,13 @@ button {
 
 .images-wrapper {
   height: 100%;
+  align-content: stretch;
+
+}
+
+.images {
+  display: grid;
+
 }
 
 .placeholder {
@@ -398,16 +401,24 @@ header .logo {
     column-count: 1;
     column-gap: 0;
   }
+  
+ 
+
 }
 
 .main-wrapper .second-panel {
   width: 620px;
+  display: grid;
 }
 
 @media (max-width: 980px) {
   .main-wrapper .second-panel {
     width: 100%;
   }
+  .images{
+    width: 100%;
+  }
+
 }
 
 .main-pager {
@@ -460,8 +471,7 @@ footer .logo {
 }
 
 .grid {
-  display: grid;
-  grid-template-rows: 380px 300px 45px;
+  grid-template-rows: 380px 300px;
   grid-template-columns: 380px 220px;
   gap: 10px;
 }
@@ -469,6 +479,35 @@ footer .logo {
 .sun {
   grid-area: 2/1/3/3;
 }
-.social-wrapper{
 
+@media (max-width: 980px) {
+  .sun {
+    grid-area: 2/1/3/2;
+  }
+  .shibolet {
+    grid-area: 1/2/3/4;
+  }
 }
+
+
+@media (max-width: 550px) {
+  .card-image {
+    width: 485px;
+    height: 381px;  
+  }
+  .grid{
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+  }
+  .tree{
+    grid-area:1/1/2/2;
+  }
+  .shibolet{
+    grid-area:2/1/3/2
+    
+  }
+  .sun{
+    grid-area:3/1/4/2;
+  }
+}
+
