--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,6 @@
   transition: all .3s;
 }
 
-
 a.more {
   display: inline-block;
   color: #c2c2c2;
@@ -214,12 +213,10 @@ button {
 .images-wrapper {
   height: 100%;
   align-content: stretch;
-
 }
 
 .images {
   display: grid;
-
 }
 
 .placeholder {
@@ -401,9 +398,6 @@ header .logo {
     column-count: 1;
     column-gap: 0;
   }
-  
- 
-
 }
 
 .main-wrapper .second-panel {
@@ -415,10 +409,7 @@ header .logo {
   .main-wrapper .second-panel {
     width: 100%;
   }
-  .images{
-    width: 100%;
-  }
-
+  
 }
 
 .main-pager {
@@ -489,25 +480,24 @@ footer .logo {
   }
 }
 
-
 @media (max-width: 550px) {
   .card-image {
-    width: 485px;
-    height: 381px;  
+    height: 381px;
   }
-  .grid{
+  .grid {
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr;
   }
-  .tree{
-    grid-area:1/1/2/2;
+  .tree {
+    grid-area: 1/1/2/3;
   }
-  .shibolet{
-    grid-area:2/1/3/2
-    
+  .shibolet {
+    grid-area: 2/1/3/3
   }
-  .sun{
-    grid-area:3/1/4/2;
+  .sun {
+    grid-area: 3/1/4/3;
+  }
+  .main-wrapper .second-panel{
+    display: block;
   }
 }
-
